--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.4",
+    "axios": "^1.8.4",
     "tailwindcss": "^4.1.4"
   }
 }
